# pattern-recognition-b

./: .gitignore  Dockerfile  README.md  docker-compose.yml  push_to_huggingface.py  pyproject.toml  requirements.txt  requirements_cross_encoder.txt  requirements_jp_clip.txt
data/bi_encoder/result/: evaluation_by_type.csv  evaluation_metrics.csv  test_predictions.csv
data/caption_processed/: test.csv  train.csv  validation.csv
data/concat_embedding_with_tree/: evaluation_results.csv
data/concat_embedding_with_tree/classification_only_cos_sim_result/: evaluation_results.csv  xgboost_humor_classifier_only_cos_sim.pkl
data/concat_embedding_with_tree/classification_result/: evaluation_results.csv  pca_response_model.pkl  xgboost_humor_classifier.pkl
data/concat_embedding_with_tree/classification_with_cos_sim_result/: evaluation_results.csv  pca_odai_model.pkl  pca_response_model.pkl  xgboost_humor_classifier_with_cos_sim.pkl
data/concat_embedding_with_tree/regression_only_cos_sim_result/: evaluation_results.csv  xgboost_humor_regressor_only_cos_sim.pkl
data/concat_embedding_with_tree/regression_result/: evaluation_results.csv  (+2 more)
data/evaluation_results/: evaluation_metrics.csv  test_predictions.csv
design/: cross_encoder.md  pytorch_mlp.md
result/: model_ architecture.pptx
result/evaluate/: evaluate.csv
result/regression_all/: bi_encoder.csv  cross_encoder.csv  xgboost.csv
result/regression_image/: bi_encoder.csv  cross_encoder.csv  xgboost.csv
result/regression_text/: bi_encoder.csv  cross_encoder.csv  xgboost.csv
src/: dataset_builder.py
src/dataloader/: README.md  dataloader.py
src/embedding/: README.md  jp_clip.py  text2vec.py
src/model/: README.md  xgboost_regressor.py
src/preprocessing/: README.md  advanced_features.py  cosine_similarity.py  embedding_processor.py
src/run/: README.md  concat_embedding_with_tree.py
src/run_final/: README.md  evaluate.py  utils.py
(+228 files in other folders)
