[project]
name = "pattern-recognition-b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=3.6.0",
    "fugashi>=1.5.1",
    "peft>=0.15.2",
    "pillow>=11.3.0",
    "protobuf>=6.31.1",
    "qwen-vl-utils>=0.0.11",
    "sentence-transformers>=5.0.0",
    "setuptools>=80.9.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers",
    "unidic-lite>=1.0.8",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }
