[project]
name = "pattern-recognition-b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.0.0,<3.0.0",
    "fugashi>=1.5.1",
    "huggingface-hub>=0.15.0,<0.25.0",
    "ipadic>=1.0.0",
    "japanese-clip",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "optuna>=3.0.0",
    "pandas>=2.3.0",
    "peft>=0.13.2",
    "pillow>=11.2.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sentencepiece==0.1.94",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.66.0",
    "transformers>=4.21.0,<4.40.0",
    "xgboost>=2.0.0",
]

[tool.uv.sources]
japanese-clip = { git = "https://github.com/rinnakk/japanese-clip.git" }
